--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.22.2",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
